Fix sidebar invisible issue

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
 }
 
 body {
