--- a/src/styles/NextProjects.css
+++ b/src/styles/NextProjects.css
@@ -1,9 +1,10 @@
 .next-projects-section-wrapper {
-  margin: 0 0 0 260px;
-  width: calc(100% - 260px);
-  max-width: 100%;
-  padding-left: 80px;
-  padding-right: 260px;
+  width: 65%;
+  max-width: 65%;
+  margin-left: 25%;
+  margin-right: 10%;
+  padding-left: 0;
+  padding-right: 0;
   padding-bottom: 100px;
   min-width: 0;
 }
