--- a/src/styles/WorkDetail.css
+++ b/src/styles/WorkDetail.css
@@ -26,12 +26,13 @@
 /* Navigation styles are handled in Navigation.css */
 
 .work-detail-container {
-  width: calc(100% - 260px);
-  max-width: 100%;
-  margin: 0 0 0 260px;
+  width: 65%;
+  max-width: 65%;
+  margin-left: 25%;
+  margin-right: 10%;
   padding-top: 5rem;
-  padding-left: 80px;
-  padding-right: 260px;
+  padding-left: 0;
+  padding-right: 0;
   min-width: 0;
 }
 
